# MemorySea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEECH.md  build.py  git.py  main.cpp  readme.doc  structural diagram.dm  var.cpp  vmain.cpp  vmain.inl  vmode.cpp  vmode.inl  who_am_i.txt
.claude/: settings.json
.claude/output-styles/: luoxin.md
.codebuddy/agents/: 洛歆.md
.github/agents/: youklx.agent.md
ini/: main.ini
ini/mainMenu/: main.ini
ini/scene/: main.ini
ini/window/: window.ini
psd/: 未标题-1.psd  未标题-2.psd  未标题-3.psd  未标题-4.psd
sence/add/: add.cpp  bulid.py
sence/jump/: bulid.py  jump.cpp
sence/jump/sw/: case1.cpp  case2.cpp  case3.cpp
sence/mainMenu/: bulid.py  mainMenu.cpp
sence/mainMenu/sw/: case1.cpp  case2.cpp  case3.cpp
sence/mselect/: bulid.py  mselect.cpp
sence/mselect/sw/: case1.cpp
sence/snake/: bulid.py  snake.cpp
sence/snake/sw/: case1.cpp  case2.cpp  case3.cpp
sence/sortDemo/: sortDemo.cpp
sence/sudoku/: sudoku.cpp
sence/sudoku/sw/: case1.cpp  case2.cpp
sence/tetris/: bulid.py  tetris.cpp
sence/tetris/sw/: case1.cpp  case2.cpp  case3.cpp
shaders/: compile.py  font.frag  image.frag  image.vert  line.frag  shader.vert
youklx/: iall.hpp  init.hpp  var.cpp  wiall.hpp
youklx/ai/: init.cpp  load.cpp  main.hpp  run.cpp  save.cpp  sfunact.cpp  sgo.cpp  sin.inl  snet.inl  train.inl
youklx/draw/: draw.cpp  font.cpp  font.inl  image.cpp  line.cpp  line.inl  lstsize.cpp  lstsize.inl  main.hpp  vupdate.cpp  vupdate.inl
youklx/draw/calculate/: font.cpp  image.cpp  image.inl  line.cpp  line.inl
youklx/draw/parameters/: drawcmd.cpp  fontcmd.cpp  fontcmd.inl  imagecmd.cpp  imagecmd.inl  linecmd.cpp
youklx/font/: clean.cpp  ensure.cpp  load.cpp  main.hpp  px.cpp  textWidth.cpp  textWidth.inl
youklx/font/parameters/: decode.cpp  glyph.cpp
youklx/image/: buildAtlas.cpp  clean.cpp  clean.inl  lpng.cpp  main.hpp
youklx/image/parameters/: plimage.cpp  plpng.cpp  plpng.inl
youklx/scene/: clear.cpp  ldll.cpp  main.cpp  main.hpp  remove.cpp
youklx/scene/en/: clear.inl  load.cpp  pe_load.cpp  pe_load.inl  remove.cpp
youklx/scene/中文/: 删除.cpp  加载.cpp  加载.inl  清空.cpp  清空.inl  私有加载.cpp
youklx/sence/: ldll.cpp  main.hpp
youklx/sence/parameters/: dll.cpp
youklx/thread/: init.cpp  main.cpp  main.hpp  main.inl  stop.cpp  th_draw.cpp  th_update.cpp  vupdate.cpp
youklx/thread/en/: clear.cpp  clear.inl  pack.cpp  run.cpp  run.inl  wait.inl
youklx/vulkan/: main.hpp
youklx/vulkan/vi/: lstsize.cpp  lstsize.inl  updateFontTexture.cpp  updateFontTexture.inl  updateTexture.cpp  updateVertexBuffer.cpp
youklx/vulkan/vl/: createCommandBuffers.cpp  createCommandPool.cpp  createCommandPool.inl  createDevice.cpp  createFramebuffers.cpp  createFramebuffers.inl  createInstance.cpp  init.cpp  (+13 more)
youklx/window/: create.cpp  fps.cpp  icon.cpp  init.cpp  lstsize.cpp  main.cpp  main.hpp  main.inl  main1.hpp  positionAdjustment.cpp  run.cpp
youklx/window1/: main1.hpp  positionAdjustment.inl
(+97 files in other folders)
